--- a/src/Xamarin.FinalNav/Xamarin.FinalNav.csproj
+++ b/src/Xamarin.FinalNav/Xamarin.FinalNav.csproj
@@ -3,6 +3,13 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<LangVersion>9.0</LangVersion>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Authors>Bernhard Pollerspöck</Authors>
+		<Company>Bernhard PollerspöckBernhard Pollerspöck</Company>
+		<Copyright>Bernhard Pollerspöck</Copyright>
+		<Description>Get your Xamarin.Forms Pages and ViewModels into the real DI world.</Description>
+		<RepositoryUrl>https://github.com/bPoller2810/Xamarin.FinalNav</RepositoryUrl>
+		<RepositoryType>https://github.com/bPoller2810/Xamarin.FinalNav</RepositoryType>
 	</PropertyGroup>
 
 	<ItemGroup>
