--- a/src/Xamarin.FinalNav/Xamarin.FinalNav.csproj
+++ b/src/Xamarin.FinalNav/Xamarin.FinalNav.csproj
@@ -16,4 +16,10 @@
 	  <PackageReference Include="Xamarin.Forms" Version="4.8.0.1687" />
 	</ItemGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Xamarin.FinalNav.Test</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
